src/test/resources/nox/errors/err_cast_missing.nox
// @test:error "CastError"
type Point { int x; int y; }
main() {
    json j = {};
    Point p = j as Point;
    return p.x;
}
